--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <b>On Sale:</b> 9/4 @ 9am<br>
             </a>
             <div class="content">
-                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a><p id='phone'>Order by Phone: (866) ILLINI-1</p>
+                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a>
                 <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
