--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="cta">
-        <h5 id="banner">Just announced: <b>Casey James</b> - <a href='#events'>Tickets on sale 9/4</a></h5>
+        <h5 id="banner">Just announced: <b>Casey James</b> - <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets on sale 9/4</a></h5>
     </div>
     <div id="nav">
         <h3 id='navcontent'>
