--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <script src="js/scroll.js"></script>
 </body>
 <footer>
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Star-course.com</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="www.star-course.com" property="cc:attributionName" rel="cc:attributionURL">Bryce Dorn</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 United States License</a>.
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Star-course.com</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://bryce.io" property="cc:attributionName" rel="cc:attributionURL">Bryce Dorn</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 United States License</a>.
     <p>Photos courtesy of a friend's <a href='http://www.flickr.com/photos/ferrinsquare/'>flickr</a> and <a href='http://www.colourlovers.com/'>colourlovers</a>.</p>
 </footer>
 </html>
