--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="google-site-verification" content="WbYPJ5sRwlEHShdPwHQKxiDjGAen2NccXdaPblq0GHI"/>
     <link rel="shortcut icon" href="img/favicon.ico">
     <link rel='stylesheet' type='text/css' href='css/styles.css'/>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -152,8 +153,8 @@
     <script src="js/script.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script type="text/javascript">
-      $("#smcontent").fitText(2.4);
-      $(".aboutdet").fitText(4);
+      $("#smcontent").fitText(3);
+      $(".aboutdet").fitText(5);
       $(".panetitle").fitText(0.5, { minFontSize: '20px', maxFontSize: '68px' });
       $(".wide").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
