adds casey img, fixes some things & updates banner

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="cta">
-        <h5 id="banner">Just announced: <b>Casey James</b> - <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets on sale 9/4</a></h5>
+        <h5 id="banner">Just announced: <b>Casey James</b> - <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets on sale now!</a></h5>
     </div>
     <div id="nav">
         <h3 id='navcontent'>
@@ -109,28 +109,19 @@
     <section id="events" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
         <article>
             <h1 class='panetitle'>events</h1>
-            <a id='announce'>
-                <h2 id='band'><b>Casey James</b></h2><br> 
-                <b>Date:</b> Thursday, October 3rd<br>
-                <b>Place:</b> Foellinger, 709 S Mathews, Urbana,  IL 61801<br>
-                <b>Time:</b> Doors 7pm, Show 8pm<br>
-                <b>Tickets:</b> Student $15, Public $20<br> 
-                <b>On Sale:</b> 9/4 @ 9am<br>
-            </a>
+            <img id='announce'src='img/caseyweb.jpg'/>
             <div class="content">
                 <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a>
                 <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
                 <div class="tbox">
-                    <p>Illinois Ticket Office</br>
-                    Room 100 Assembly Hall</br>
-                    1800 S. First St.</br>
-                    Champaign, IL 61820</br>
-                    Mon - Fri 10AM - 5PM</p>
+                    <p><b>Illinois Ticket Office</b>:
+                    Room 100 Assembly Hall, 1800 S. First St.</br>
+                    Champaign, IL 61820 | Mon - Fri 10AM - 5PM</p>
                 </div>
-                <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
-                <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div>
+                <!-- <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
+                <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div> -->
             </div>
         </article>
     </section>
