--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
                 <p>Members are required to join one non-day of show and one day of show.</p>
                 <p>All members will join Public Relations or Publicity for a non-day of show committee with the option of participating in Ad Design, Ad Media, Marketing, Personnel, or Social Media. </p>
                 <h2>Non-Day of Show Committees</h2>
-                <p>Ad Design: Creates print and radio advertisements for upcoming shows. Designs content and layout of the star course web site. </p>
-                <p>Ad Media: Places ads with newspapers and radio stations and organizes ticket giveaway promotions. Coordinates media-artist relations. </p>
-                <p>Marketing: Oversees group marketing efforts. Coordinates and executes marketing plan. </p>
-                <p>Personnel: Manages staff roster, plans member events, and organizes internal communication.</p>
-                <p>Public Relations: Organizes contests and other live on-campus promotions. Works with University and community organizations and businesses to promote shows and gain sponsorship.</p>
-                <p>Publicity: Distributes advertising materials to the community. Designs displays and other types of artistic promotions. </p>
-                <p>Social Media: All things social media. Manages online presence and online marketing.  Social media sites include: Facebook, Twitter, Tumblr, Instagram, Pinterest </p>
+                <p><b>Ad Design:</b> Creates print and radio advertisements for upcoming shows. Designs content and layout of the star course web site. </p>
+                <p><b>Ad Media:</b> Places ads with newspapers and radio stations and organizes ticket giveaway promotions. Coordinates media-artist relations. </p>
+                <p><b>Marketing:</b> Oversees group marketing efforts. Coordinates and executes marketing plan. </p>
+                <p><b>Personnel:</b> Manages staff roster, plans member events, and organizes internal communication.</p>
+                <p><b>Public Relations:</b> Organizes contests and other live on-campus promotions. Works with University and community organizations and businesses to promote shows and gain sponsorship.</p>
+                <p><b>Publicity:</b> Distributes advertising materials to the community. Designs displays and other types of artistic promotions. </p>
+                <p><b>Social Media:</b> All things social media. Manages online presence and online marketing.  Social media sites include: Facebook, Twitter, Tumblr, Instagram, Pinterest </p>
                 <h2>Day of Show Committees</h2>
-                <p>Business Administration: Handles account payments and  finances. Directs fundraising and sponsorship for the organization. Sells band merchandise on the day of show.</p>
-                <p>Hospitality: Maintains office hours and supplies. Coordinates all catering and hospitality efforts on the day of show.</p>
-                <p>Stage &amp; Production: Staffs backstage, production hand, security, and ushering positions.</p>
-                <p>Tickets: Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show.</p>
+                <p><b>Business Administration:</b> Handles account payments and  finances. Directs fundraising and sponsorship for the organization. Sells band merchandise on the day of show.</p>
+                <p><b>Hospitality:</b> Maintains office hours and supplies. Coordinates all catering and hospitality efforts on the day of show.</p>
+                <p><b>Stage &amp; Production:</b> Staffs backstage, production hand, security, and ushering positions.</p>
+                <p><b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show.</p>
             </div>
         </article>
     </section>
