--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                     <img class="socialicon" src="img/color/pinterest-circle-color@2x.png"/>
                     </a>
                 </li>
+                <li id="turntable" class="aspect">
+                    <a href="http://turntable.fm/52364e8aeb35c11bfcb602c9">
+                    <img class="socialicon" src="img/color/turntable-circle@2x.png"/>
+                    </a>
+                </li>
             </ul>
         </div>  
         <!-- <img id='badge' src="img/badge.png"/> -->
