--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="cta">
-        <h5 id="banner">Just announced: <b>BAAUER</b> - <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets on sale now!</a></h5>
+        <h5 id="banner">Just announced: <b>GROUPLOVE</b> | <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets to all Star Course events</a></h5>
     </div>
     <div id="nav">
         <h3 id='navcontent'>
@@ -114,9 +114,9 @@
     <section id="events" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
         <article>
             <h1 class='panetitle'>events</h1>
-            <img id='announce'src='img/baauer.jpg'/>
+            <a href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'><img id='announce'src='img/baauer_theirs.png'/></a>
             <div class="content">
-                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a>
+                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a>
                 <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
@@ -128,9 +128,9 @@
                 <!-- <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
                 <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div> -->
             </div>
-            <img id='announce'src='img/caseyweb.jpg'/>
+            <a href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'><img id='announce'src='img/grplvfin2.png'/></a>
             <div class="content">
-                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>General Ticket Info</a>
+                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a>
                 <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
