added sr mgr emails

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                     <span itemprop="telephone">Phone: (217) 333-0457</span></br>
                     Fax: (217) 333-8987
                 </p>
-                <h2><a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
+                <h2>Want to join? Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
+                <h2>Contact senior managers: <a href='banovz.jessica@gmail.com'>Jessica</a> and <a href='donaldbauerjr22@gmail.com'>Donald</a>.</h2>
             </div>
         </article>
     </section>
