--- a/index.html
+++ b/index.html
@@ -148,7 +148,14 @@
         <article>
             <h1 class='panetitle'>contact</h1>
             <div class="content upper">
-                <h2>Get in touch with senior management: <a href='banovz.jessica@gmail.com'>Jessica</a> and <a href='donaldbauerjr22@gmail.com'>Donald</a>.</h2>
+                <p id='address' itemprop="address"></br>
+                    Mailbox 90</br>
+                    280 Illini Union</br>
+                    1401 W Green St, Urbana, IL 61801</br>
+                    <span itemprop="telephone">Phone: (217) 333-0457</span></br>
+                    Fax: (217) 333-8987
+                </p>
+                <h2>Get in touch with senior management: <a href='mailto:banovz.jessica@gmail.com'>Jessica</a> and <a href='mailto:donaldbauerjr22@gmail.com'>Donald</a>.</h2>
                 <h2>Other questions? Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
             </div>
         </article>
