--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     </script>
 </head>
 <body>
-    <!--
+    
+    <div id="cta">
+        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel</a> to apply.</h5>
+    </div>
+
+    <!-- 
+    Show CTA template
     <div id="cta">
         <h5 id="banner">Come see <b>GROUPLOVE</b> this Friday! | <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets to all Star Course events</a></h5>
     </div>
-    -->
+     -->
+    
     <div id="nav">
         <h3 id='navcontent'>
             <a href="">///</a>
@@ -160,9 +167,9 @@
       $(".wide").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
-    <!--
+    <!-- COMMENT NEXT LINE TO HIDE BANNER -->
     <script src="js/scroll.js"></script>
-    -->
+    <!--  -->
 </body>
 <footer>
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/us/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Star-course.com</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://bryce.io" property="cc:attributionName" rel="cc:attributionURL">Bryce Dorn</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 United States License</a>.
