adds subj to email link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <div id="cta">
-        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel</a> to apply.</h5>
+        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%20Application'>starcoursepersonnel</a> to apply.</h5>
     </div>
 
     <!-- 
