few minor updates:  - removes unused imgs / promos  - removes turntable link (RIP)  - changes org background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     
     <div id="cta">
-        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%20Application'>starcoursepersonnel</a> to apply.</h5>
+        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%   '>starcoursepersonnel</a> to apply.</h5>
     </div>
 
     <!-- 
@@ -61,11 +61,6 @@
                 <li id="pinterest" class="aspect">
                     <a href="http://pinterest.com/starcourse">
                     <img class="socialicon" src="img/color/pinterest-circle-color@2x.png"/>
-                    </a>
-                </li>
-                <li id="turntable" class="aspect">
-                    <a href="http://turntable.fm/523a3d37eb35c16af4909e42">
-                    <img class="socialicon" src="img/color/turntable-circle@2x.png"/>
                     </a>
                 </li>
             </ul>
