updates site to display Phantogram, removes unused imgs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <h5 id="banner">Come see <b>GROUPLOVE</b> this Friday! | <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets to all Star Course events</a></h5>
     </div>
      -->
+
+    <div id="cta">
+        <h2 id="banner">Just announced: <b><a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>PHANTOGRAM</a></b> is coming. April 9th.</h2>
+    </div>
     
     <div id="nav">
         <h3 id='navcontent'>
@@ -136,7 +140,7 @@
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="950" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="0" data-type="background">
         <article>
             <h1 class='panetitle'>contact</h1>
             <div class="content upper">
