changes cta content

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </script>
 </head>
 <body>
-    
+   <!--  
     <div id="cta">
         <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%   '>starcoursepersonnel</a> to apply.</h5>
     </div>
-
+ -->
     <!-- 
     Show CTA template
     <div id="cta">
@@ -29,7 +29,7 @@
      -->
 
     <div id="cta">
-        <h2 id="banner">Just announced: <b><a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>PHANTOGRAM</a></b> is coming. April 9th.</h2>
+        <h2 id="banner">Just announced: <b><a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.facebook.com/events/1447734222123402'>GET PUMPED.</a></h2>
     </div>
     
     <div id="nav">
