adds phant img and changes cta links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      -->
 
     <div id="cta">
-        <h2 id="banner">Just announced: <b><a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.facebook.com/events/1447734222123402'>GET PUMPED.</a></h2>
+        <h2 id="banner">Just announced: <b><a href='https://www.facebook.com/events/1447734222123402'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
     </div>
     
     <div id="nav">
@@ -122,19 +122,18 @@
     <section id="events" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
         <article>
             <h1 class='panetitle'>events</h1>
-            <!--
-            <a href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'><img id='announce'src='img/grplvfin2.png'/></a>
-            -->
+            <a href='http://www.thevirginia.org/shows/music'><img id='announce'src='img/phant_web.jpg'/></a>
             <div class="content">
-                <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a>
-                <br><br>
+                <a id='general' href='http://www.thevirginia.org/shows/music'>Get your tickets online!</a>
+                <!-- <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a> -->
+                <!-- <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
                 
                 <div class="tbox">
                     <p><b>Illinois Ticket Office</b>:
                     Room 100 Assembly Hall, 1800 S. First St.</br>
                     Champaign, IL 61820 | Mon - Fri 10AM - 5PM</p>
-                </div>
+                </div> -->
                 <!-- <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
                 <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div> -->
             </div>
@@ -164,6 +163,7 @@
       $(".aboutdet").fitText(5);
       $(".panetitle").fitText(0.5, { minFontSize: '20px', maxFontSize: '68px' });
       $(".wide").fitText(4);
+      $("#banner").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
     <!-- COMMENT NEXT LINE TO HIDE BANNER -->
