--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      -->
 
     <div id="cta">
-        <h2 id="banner">Just announced: <b><a href='https://www.facebook.com/events/1447734222123402'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
+        <h2 id="banner">Just announced: <b><a href='http://www.thevirginia.org/shows/music/76-phantogram'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
     </div>
     
     <div id="nav">
@@ -87,7 +87,8 @@
             <h1 class='panetitle'>events</h1>
             <a href='http://www.thevirginia.org/shows/music'><img id='announce'src='img/phant_web.jpg'/></a>
             <div class="content">
-                <a id='general' href='http://www.thevirginia.org/shows/music'>Get your tickets online!</a>
+                <a id='general' href='http://www.thevirginia.org/shows/music/76-phantogram'>Get your tickets online!</a>
+                <h2>Or at The Virginia Theater Box Office (Mon-Friday 10-5:30) or by calling 217-356-9063.</h2>
                 <!-- <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a> -->
                 <!-- <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
