--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
     <meta name="google-site-verification" content="WbYPJ5sRwlEHShdPwHQKxiDjGAen2NccXdaPblq0GHI"/>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel='stylesheet' type='text/css' href='css/styles.css'/>
+    <link rel='stylesheet' type='text/css' href='css/styles.scss'/>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -140,7 +140,7 @@
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="100" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="200" data-type="background">
         <article>
             <h1 class='panetitle'>contact</h1>
             <div class="content upper">
@@ -161,8 +161,8 @@
     <script src="js/jquery.fittext.js"></script>
     <script type="text/javascript">
       $("#smcontent").fitText(3);
-      $(".aboutdet").fitText(5);
-      $(".panetitle").fitText(0.5, { minFontSize: '20px', maxFontSize: '68px' });
+      $(".aboutdet").fitText(3, { minFontSize: '10px', maxFontSize: '18px' });
+      $(".panetitle").fitText(2, { minFontSize: '18px', maxFontSize: '68px' });
       $(".wide").fitText(4);
       $("#banner").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
