--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      -->
 
     <div id="cta">
-        <h2 id="banner">Just announced: <b><a href='http://www.thevirginia.org/shows/music/76-phantogram'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
+        <h2 id="banner"><b><a href='http://www.thevirginia.org/shows/music/76-phantogram'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
     </div>
     
     <div id="nav">
