updates to current site

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div id="cta">
         <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%   '>starcoursepersonnel</a> to apply.</h5>
     </div>
- -->
+    -->
+
     <!-- 
     Show CTA template
     <div id="cta">
@@ -28,10 +29,12 @@
     </div>
      -->
 
+    
     <div id="cta">
-        <h2 id="banner"><b><a href='http://www.thevirginia.org/shows/music/76-phantogram'>PHANTOGRAM</a></b> is coming to Virginia Theater. April 9th. <a href='https://www.youtube.com/watch?v=ZvSgLHWR16o'>GET PUMPED.</a></h2>
+        <h2 id="banner">Thanks again, <b><a href='http://www.phantogram.com/'>PHANTOGRAM</a></b> - you guys rocked.</h2>
     </div>
     
+
     <div id="nav">
         <h3 id='navcontent'>
             <a href="">///</a>
@@ -82,13 +85,18 @@
             <h2 id='smcontent' itemprop="title">Star Course is a live-concert promotion and production organization run by students for fellow students and the Champaign-Urbana community. Members participate in all levels of event planning – from orchestrating advertising campaigns to organizing ticket sales to staffing house and backstage positions on the day-of-show. Star Course is about diversity in music, creativity in learning and friendship in community.</h2>
         </article>
     </section>
-    <section id="events" class="story taller" data-speed="6" data-offsetY="460" data-type="background">
+    <section id="events" class="story taller" data-speed="6" data-offsetY="100" data-type="background">
         <article>
             <h1 class='panetitle'>events</h1>
+            <div class="content">
+                <a id='general' href="https://twitter.com/starcourse">None at the moment! Stay tuned.</a>
+            </div>
+            <!--
             <a href='http://www.thevirginia.org/shows/music'><img id='announce'src='img/phant_web.jpg'/></a>
             <div class="content">
                 <a id='general' href='http://www.thevirginia.org/shows/music/76-phantogram'>Get your tickets online!</a>
                 <h2>Or at The Virginia Theater Box Office (Mon-Friday 10-5:30) or by calling 217-356-9063.</h2>
+            -->
                 <!-- <a id='general' href='http://www.uofiassemblyhall.com/tickets_box_office.aspx'>Get your tickets online!</a> -->
                 <!-- <br><br>
                 <h2>Tickets for <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext=&caller=&appCode='><b>Foellinger Auditorium</b></a> shows:</h2>
@@ -100,10 +108,12 @@
                 </div> -->
                 <!-- <h2>Tickets for <b>Courtyard Cafe</b> shows:</h2>
                 <div class="tbox"><p>Courtyard Cafe Office (next to Espresso Royale in the Illini Union)</p></div> -->
+            <!--
             </div>
+            -->
         </article>
     </section>
-    <section id="about" class="taller story" data-speed="5" data-offsetY="560" data-type="background">
+    <section id="about" class="taller story" data-speed="5" data-offsetY="400" data-type="background">
         <article>
             <h1 class='panetitle'>about</h1>
             <div class="content right">
@@ -140,7 +150,7 @@
             </div>
         </article>
     </section>
-    <section id="contact" class="story" data-speed="4" data-offsetY="300" data-type="background">
+    <section id="contact" class="story" data-speed="4" data-offsetY="100" data-type="background">
         <article>
             <h1 class='panetitle'>contact</h1>
             <div class="content upper">
@@ -151,7 +161,7 @@
                     <span itemprop="telephone">Phone: (217) 333-0457</span></br>
                     Fax: (217) 333-8987
                 </p>
-                <h2>Get in touch with senior management: <a href='mailto:banovz.jessica@gmail.com'>Jessica</a> and <a href='mailto:donaldbauerjr22@gmail.com'>Donald</a>.</h2>
+                <h2>Get in touch with the senior management: <a href='mailto:banovz.jessica@gmail.com'>Jessica</a> and <a href='mailto:donaldbauerjr22@gmail.com'>Donald</a>.</h2>
                 <h2>Other questions? Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
             </div>
         </article>
@@ -160,10 +170,9 @@
     <script src="js/script.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script type="text/javascript">
-      $("#smcontent").fitText(3);
       $(".aboutdet").fitText(3, { minFontSize: '10px', maxFontSize: '18px' });
-      $(".panetitle").fitText(2, { minFontSize: '18px', maxFontSize: '68px' });
-      $(".wide").fitText(4);
+      // $(".panetitle").fitText(2, { minFontSize: '18px', maxFontSize: '68px' });
+      // $(".wide").fitText(4);
       $("#banner").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
