updates cta to reflect current events

--- a/index.html
+++ b/index.html
@@ -18,22 +18,25 @@
 <body>
    <!--  
     <div id="cta">
-        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%   '>starcoursepersonnel</a> to apply.</h5>
+        <h5 id="banner">Now accepting new members for Spring 2014! Email <a href='mailto:starcoursepersonnel@gmail.com?subject=Spring%202014%'>starcoursepersonnel</a> to apply.</h5>
     </div>
     -->
 
     <!-- 
-    Show CTA template
     <div id="cta">
         <h5 id="banner">Come see <b>GROUPLOVE</b> this Friday! | <a href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Tickets to all Star Course events</a></h5>
     </div>
      -->
 
-    
+    <div id="cta">
+        <h2 id="banner">Coming soon via Star Course: <b><a href='img/iub-uf.jpg'>IUB's Union Fest</a></b> and an exclusive <b><a href='img/mtv.pdf'>MTV film screening!</a></b></h2>
+    </div>
+
+    <!-- 
     <div id="cta">
         <h2 id="banner">Thanks again, <b><a href='http://www.phantogram.com/'>PHANTOGRAM</a></b> - you guys rocked.</h2>
     </div>
-    
+     -->
 
     <div id="nav">
         <h3 id='navcontent'>
