updates mtv flyer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      -->
 
     <div id="cta">
-        <h2 id="banner">Coming soon via Star Course: <b><a href='img/iub-uf.jpg'>IUB's Union Fest</a></b> and an exclusive <b><a href='img/mtv.pdf'>MTV film screening!</a></b></h2>
+        <h2 id="banner">Coming soon via Star Course: <b><a href='img/iub-uf.jpg'>IUB's Union Fest</a></b> and an exclusive <b><a href='img/MTV_No-Cameras-Allowed-Illinois.jpg'>MTV film screening!</a></b></h2>
     </div>
 
     <!-- 
@@ -174,12 +174,10 @@
     <script src="js/jquery.fittext.js"></script>
     <script type="text/javascript">
       $(".aboutdet").fitText(3, { minFontSize: '10px', maxFontSize: '18px' });
-      // $(".panetitle").fitText(2, { minFontSize: '18px', maxFontSize: '68px' });
-      // $(".wide").fitText(4);
       $("#banner").fitText(4);
       $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
-    <!-- COMMENT NEXT LINE TO HIDE BANNER -->
+    <!-- COMMENT NEXT LINE TO HIDE BANNER - DON'T FORGET CSS TOO -->
     <script src="js/scroll.js"></script>
     <!--  -->
 </body>
