updates sr mgmt

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <span itemprop="telephone">Phone: (217) 333-0457</span></br>
                     Fax: (217) 333-8987
                 </p>
-                <h2>Get in touch with the senior management: <a href='mailto:banovz.jessica@gmail.com'>Jessica</a> and <a href='mailto:donaldbauerjr22@gmail.com'>Donald</a>.</h2>
+                <h2>Get in touch with the senior management: <a href='mailto:marohn2@illinois.edu'>Ryan</a> and <a href='mailto:hahn28@illinois.edu'>Hannah</a>.</h2>
                 <h2>Other questions? Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
             </div>
         </article>
