hides phant banner

--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
         <h2 id="banner">Coming soon via Star Course: <b><a href='img/iub-uf.jpg'>IUB's Union Fest</a></b> and an exclusive <b><a href='img/MTV_No-Cameras-Allowed-Illinois.jpg'>MTV film screening!</a></b></h2>
     </div>
     -->
-
+    
+    <!-- COMMENT NEXT BLOCK TO HIDE BANNER - ALSO NEED TO COMMENT CSS AND SCRIPT AT BOTTOM OF PAGE -->
+    <!-- 
     <div id="cta">
         <h2 id="banner">Thanks again, <b><a href='http://www.phantogram.com/'>PHANTOGRAM</a></b> - you guys rocked.</h2>
     </div>
-
+    -->
     <div id="nav">
         <h3 id='navcontent'>
             <a href="">///</a>
@@ -178,7 +180,7 @@
       $("#cta").fitText(3, { minFontSize: '24px' });
     </script>
     <!-- COMMENT NEXT LINE TO HIDE BANNER - DON'T FORGET CSS TOO -->
-    <script src="js/scroll.js"></script>
+    <!-- <script src="js/scroll.js"></script> -->
     <!--  -->
 </body>
 <footer>
