--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h1 class='panetitle'>events</h1>
             
             <!-- EVENT INFO GOES HERE -->
-            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ASKY%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'><img id='announce'src='img/sky.jpg'/></a>
+            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ASKY%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'><img id='announce'src='img/scad.jpg'/></a>
             <div class="content">
                 <a id='general' href='https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ASKY%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'>Get your tickets online!</a>
                 </br>
