Public Tickets Link Swap
Changed link to updated that chris just sent

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <!-- EVENT INFO GOES HERE -->
             <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ASKY%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'><img id='announce'src='img/quadday.jpg'/></a>
             <div class="content">
-                <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ALOVE%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'>Get your public tickets here!</a>
+                <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Get your public tickets here!</a>
                 </br>
                 </br>
                 <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST'>Click here for student tickets.</a>
