Photo Link Swap
Swapped photo link with new one from chris

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1 class='panetitle'>events</h1>
             
             <!-- EVENT INFO GOES HERE -->
-            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE14%3ASKY%3A&linkID=illinois&shopperContext&pc&caller&appCode&groupCode=STARCOURSE&cgc'><img id='announce'src='img/quadday.jpg'/></a>
+            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'src='img/quadday.jpg'/></a>
             <div class="content">
                 <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Get your public tickets here!</a>
                 </br>
