--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Get your public tickets here!</a>
                 </br>
                 </br>
-                <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=%2Fcgi-bin%2Fncommerce3%2FSEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST'>Click here for student tickets.</a>
+                <a id='general' href='https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST'>Click here for student tickets.</a>
                 <!-- <h2>Or at The Virginia Theater Box Office (Mon-Friday 10-5:30) or by calling 217-356-9063.</h2> -->
                 </br>
                 </br>
