--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1 class='panetitle'>events</h1>
             
             <!-- EVENT INFO GOES HERE -->
-            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'><img id='announce'src='img/quadday.jpg'/></a>
+            <a href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'><img id='announce'src='img/nate.png'/></a>
             <div class="content">
                 <a id='general' href='http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventList?groupCode=STARCOURSE&linkID=illinois&shopperContext&caller&appCode'>Get your public tickets here!</a>
                 </br>
