Another pic swap
New neon poster with new wordage at prices

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1 class='panetitle'>events</h1>
             
             <!-- For when I need a pic! -->
-            <<a href='http://www.ticketfly.com/purchase/event/1313381?utm_source=fbTfly&utm_medium=ampOfficialEvent'><img id='announce'src='img/neonnocode.png'/></a>
+            <<a href='http://www.ticketfly.com/purchase/event/1313381?utm_source=fbTfly&utm_medium=ampOfficialEvent'><img id='announce'src='img/neonnew.png'/></a>
             <div class="content"> -->
 
         <div class="videowrapper">
