--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h1 class='panetitle'>events</h1>
             
             <!-- For when I need a pic! -->
-            <<a href='http://bit.ly/2lVHFVd'><img id='announce'src='img/vince.png'/></a>
+            <<a href='http://bit.ly/2lVHFVd'><img id='announce'src='img/Vince.png'/></a>
             <div class="content"> -->
 
         <div class="videowrapper">
