--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                     <span itemprop="telephone">Phone: (217) 333-0457</span></br>
                     Fax: (217) 333-8987
                 </p>
-                <h2>Get in touch with the senior management: <a href='mailto:gaglani2@illinois.edu'>Alishan</a> and <a href='mailto:hnn1115@gmail.com'>Hannah</a>.</h2>
-                <h2>Other questions? Email <a href='mailto:starcoursepersonnel@gmail.com'>starcoursepersonnel@gmail.com</a></h2>
+                <h2>Get in touch with the senior management: <a href='mailto:kate.milleker@gmail.com'>Kate</a> and <a href='mailto:nmcain430@gmail.com'>Nick</a>.</h2>
+                <h2>Other questions? Email <a href='mailto:starcoursemusic@gmail.com'>starcoursemusic@gmail.com</a></h2>
             </div>
         </article>
     </section>
