--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a id="link-about" href="#about">about</a>
             <a id="link-staff" href="#staff">staff</a>
             <a id="link-contact" href="#contact">contact</a>
+            <a id="link-test" href="/Website/index.html">Test</a>
         </h3>
         <div id="socialul">
             <ul>
