--- a/Website/index.html
+++ b/Website/index.html
@@ -149,16 +149,16 @@
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
-			<img src="/img/banners/phant-1bw.jpg" alt="">
+			<img src="img/banners/phant-1bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/caseybw.jpg" alt="">
+			<img src="img/banners/caseybw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/concert1bw.jpg" alt="">
+			<img src="img/banners/concert1bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/concert4bw.jpg" alt="">
+			<img src="img/banners/concert4bw.jpg" alt="">
 		</li>
 	</ul>
 </div>
