--- a/Website/index.html
+++ b/Website/index.html
@@ -211,16 +211,16 @@
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
-			<img src="/img/banners/concert2bw.jpg" alt="">
+			<img src="img/banners/concert2bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/grouplove-2bw.jpg" alt="">
+			<img src="img/banners/grouplove-2bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/phant-2bw.jpg" alt="">
+			<img src="img/banners/phant-2bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/grouplove3bw.jpg" alt="">
+			<img src="img/banners/grouplove3bw.jpg" alt="">
 		</li>
 	</ul>
 </div>
@@ -241,35 +241,35 @@
 	<h3> Recent Shows </h3>
 	<div class="row">		
 		<h4> 2016 - 2017: </h4>
-		<img src="/img/posters/neon%20indian.png" alt="" height="250">
-		<img src="/img/posters/American%20Football.png" alt="" height="250">
-		<img src="/img/posters/Vince.png" alt="" height="250">
-		<img src="/img/posters/noname.jpg" alt="" height="250">
+		<img src="img/posters/neon%20indian.png" alt="" height="250">
+		<img src="img/posters/American%20Football.png" alt="" height="250">
+		<img src="img/posters/Vince.png" alt="" height="250">
+		<img src="img/posters/noname.jpg" alt="" height="250">
 		<p><br></p>
 	</div>
 	<div class="row">		
 		<h4> 2015 - 2016: </h4>
-		<img src="/img/posters/nate%20ruess.png" alt="" height="250">
-		<img src="/img/posters/rae%20sremmurd.png" alt="" height="250">
-		<img src="/img/posters/ryn%20weaver.png" alt="" height="250">
-		<img src="/img/posters/father%20john%20misty.jpg" height="250">
+		<img src="img/posters/nate%20ruess.png" alt="" height="250">
+		<img src="img/posters/rae%20sremmurd.png" alt="" height="250">
+		<img src="img/posters/ryn%20weaver.png" alt="" height="250">
+		<img src="img/posters/father%20john%20misty.jpg" height="250">
 		<p><br></p>
 	</div>
 		<div class="row">		
 		<h4> 2014 - 2015: </h4>
-		<img src="/img/posters/skyferreira.jpg" alt="" height="250">
-		<img src="/img/posters/mac.jpg" alt="" width="250">
-		<img src="/img/posters/hoodieallen.jpg" alt="" height="250">
-		<img src="/img/posters/bo%20burnham.jpg" alt="" height="250">
-		<img src="/img/posters/ilovemakonnen.jpg" alt="" height="250">
+		<img src="img/posters/skyferreira.jpg" alt="" height="250">
+		<img src="img/posters/mac.jpg" alt="" width="250">
+		<img src="img/posters/hoodieallen.jpg" alt="" height="250">
+		<img src="img/posters/bo%20burnham.jpg" alt="" height="250">
+		<img src="img/posters/ilovemakonnen.jpg" alt="" height="250">
 		<p><br></p>
 	</div>
 	<div class="row">		
 		<h4> 2013 - 2014: </h4>
-		<img src="/img/posters/caseyjames.jpg" alt="" height="250">
-		<img src="/img/posters/baauer.jpg" alt="" height="250">
-		<img src="/img/posters/grouplove.jpg" alt="" height="250">
-		<img src="/img/posters/phantogram.jpg" alt="" height="250">
+		<img src="img/posters/caseyjames.jpg" alt="" height="250">
+		<img src="img/posters/baauer.jpg" alt="" height="250">
+		<img src="img/posters/grouplove.jpg" alt="" height="250">
+		<img src="img/posters/phantogram.jpg" alt="" height="250">
 		<p><br></p>
 	</div>
 </div>
@@ -279,16 +279,16 @@
 <div class="gallery">
 	<ul>
 		<li class="col-md-3">
-			<img src="/img/banners/crowdbw.jpg" alt="">
+			<img src="img/banners/crowdbw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/baauer2bw.jpg" alt="">
+			<img src="img/banners/baauer2bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/grouplove4bw.jpg" alt="">
+			<img src="img/banners/grouplove4bw.jpg" alt="">
 		</li>
 		<li class="col-md-3">
-			<img src="/img/banners/phant3bw.jpg" alt="">
+			<img src="img/banners/phant3bw.jpg" alt="">
 		</li>
 	</ul>
 </div>
